2007-08-18  Brian Matherly <brian@gramps-project.org>
	* src/plugins/KinshipReport.py: Add kinship report
	* src/plugins/Makefile.am: Add KinshipReport.py
	* src/POTFILES.in: Add KinshipReport.py
	
2007-08-18  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/GtkPrint.py: Text report generation done.

2007-08-18  Brian Matherly <brian@gramps-project.org>
	* src/ViewManager.py
	* src/plugins/rel_fr.py
	* src/plugins/rel_da.py
	* src/plugins/rel_de.py
	* src/plugins/rel_sv.py
	* src/plugins/rel_fi.py
	* src/plugins/rel_hu.py
	* src/plugins/rel_ru.py
	* src/plugins/rel_nl.py
	* src/plugins/rel_pl.py
	* src/plugins/rel_it.py
	* src/plugins/RelCalc.py
	* src/plugins/rel_cs.py
	* src/plugins/rel_es.py
	* src/plugins/rel_no.py
	* src/plugins/rel_sk.py
	* src/DisplayState.py
	* src/PluginUtils/_PluginMgr.py
	* src/Relationship.py:
	  Remove db requirement from constructor and add 
	  get_plural_relationship_string to relationship class.

2007-08-18  Benny Malengier <bm@cage.ugent.be>
	* README: small changes, also bug #1164

2007-08-17 Benny Malengier <bm@cage.ugent.be>
	* README: update the required packages for GRAMPS 3.0

2007-08-17  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/docgen/GtkPrint.py: Text report generation is almost ready...

2007-08-16 Benny Malengier <bm@cage.ugent.be>
	* src/Exporter.py: correct crash in export assistent on invalid filenames

2007-08-17  Piotr Czubaszek  <pioterus@gmail.com>
	* src/DateHandler/_Date_pl.py: Add new module.
	* src/DateHandler/__init__.py: Import new module.
	* src/DateHandler/Makefile.am: Ship new file.

2007-08-16  Don Allingham  <don@gramps-project.org>
	* src/Filters/SideBar/_PersonSidebarFilter.py: document a little bit more

2007-08-16 Benny Malengier <bm@cage.ugent.be>
	* src/plugins/GraphViz.py: Port FamilyLines.py people images to descendant chart

2007-08-15  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_WriteGedcom.py: Match parser and writer